ajustando o TShowField.java